Fix beta badge color in dark mode

--- a/docusaurus/src/scss/badge.scss
+++ b/docusaurus/src/scss/badge.scss
@@ -646,8 +646,9 @@ h2 .badge {
     &--alpha,
     &--beta,
     &--featureflag,
-    &--version {
-      --custom-badge-background-color: var(--strapi-neutral-100);
+    &--version,
+    &--inline {
+      --custom-badge-background-color: var(--strapi-neutral-100) !important;
       --custom-badge-border-color: var(--strapi-neutral-200);
     }
     &--beta {
